<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_the_uni">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorPrimary">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="The University"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="60dp"
                android:text="@string/ataglance"
		android:textColor="#000000" />


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="170dp"
                app:cardBackgroundColor="@color/colorPrimary">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="Faculty and Departments "
                    android:textColor="#FFFFFF"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="220dp"
                android:text="Faculty of Graduate Studies"
                android:textSize="12dp"
                android:textStyle="bold"
                android:textColor="#000000"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="240dp"
                android:text="MS and PhD Program"
                android:textSize="12dp"
                android:textStyle="italic"
		android:textColor="#000000"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="260dp"
                android:text="@string/mscphd"
                android:textSize="12dp"
                android:textColor="#000000"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="360dp"
                android:text="Faculty of Agriculture"
                android:textSize="15dp"
                android:textStyle="bold"
		android:textColor="#000000"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="380dp"
                android:text="@string/fagri"
                android:textSize="12dp"
                android:textColor="#000000"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="480dp"
                android:text="Faculty of Fisheries"
                android:textSize="15dp"
                android:textStyle="bold"
                android:textColor="#000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="520dp"
                android:text="@string/ffish"
                android:textSize="12dp"
                android:textColor="#000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="570dp"
                android:text="Faculty of Veterinary Medicine and Animal Science"
                android:textSize="15dp"
                android:textStyle="bold"
                android:textColor="#000000"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="590dp"
                android:text="@string/ffv"
                android:textSize="12dp"
                android:textColor="#000000"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="670dp"
                android:text="Faculty of Agricultural Economics and Rural Development"
                android:textSize="15dp"
                android:textStyle="bold"
                android:textColor="#000000"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="710dp"
                android:text="@string/fae"
                android:textSize="12dp"
                android:textColor="#000000"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="770dp"
                android:text="Degree awarded : BS, DVM, MS and PhD"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="#000000"  />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="800dp"
                app:cardBackgroundColor="@color/colorPrimary">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="More Info"
                    android:textColor="#FFFFFF"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="850dp"
                android:text="@string/theunimore"
                android:textColor="#000000" 
                android:textSize="15dp" />
        </RelativeLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
